Fix overflow image community on mobile

--- a/themes/my-theme/source/css/desktop.scss
+++ b/themes/my-theme/source/css/desktop.scss
@@ -205,7 +205,6 @@
   // new styles
   body {
     font-size: $font-size-18;
-    overflow-x: hidden;
   }
 
   p {
