--- a/themes/my-theme/source/css/pages/_homepage.scss
+++ b/themes/my-theme/source/css/pages/_homepage.scss
@@ -508,7 +508,6 @@
 
 .academy-community-image {
   position: relative;
-  right: -4rem;
   margin-bottom: 4rem;
 }
 
